--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,16 @@ body {
   border : 1px solid white;
 }
 
+.menu {
+  text-decoration: none;
+  font-family: sans-serif;
+  color: #5757a0;
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: lavender;
+  border-bottom: 5px solid #5757a0;
+}
+
 .container-2 {
   width: 450px;
   max-height: 1200px;
